--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "mongoose": "^6.10.3",
     "nodemon": "^3.0.1",
-    "openai": "^3.2.1"
+    "openai": "^4.28.0"
   },
   "devDependencies": {
     "eslint": "^8.31.0",
