--- a/env.yaml
+++ b/env.yaml
@@ -1,2 +1,2 @@
-OPENAI_API_KEY: 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
-MONGODB_URL: mongodb+srv://blasj408:123123123a@cluster0.za8i8lw.mongodb.net/?retryWrites=true&w=majority
+OPENAI_API_KEY: ${OPENAI_API_KEY}
+MONGODB_URL: ${MONGODB_URL}
