Upgrade to DALL-E 3.0 and Fix Production Issues

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,16 @@
+# OpenAI API Configuration
 OPENAI_API_KEY=your_openai_api_key_here
+
+# MongoDB Connection
 MONGODB_URL=your_mongodb_connection_string_here
-PORT=8080
+
+# Server Configuration
+PORT=10000
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+
+# Rate Limiting (requests per 15 minutes window)
+RATE_LIMIT_MAX=100
