--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-    "name": "dall-e",
-    "version": "1.0.0",
-    "description": "![68747470733a2f2f692e6962622e636f2f703066323743322f5468756d626e61696c2d392e706e67](https://user-images.githubusercontent.com/40072373/226223834-551a3a67-6b73-425f-ae3f-05eda2c50466.png)",
-    "main": "server/index.js",
-    "scripts": {
-      "start": "node server/index.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC"
+  "name": "dall-e",
+  "version": "1.0.0",
+  "description": "![68747470733a2f2f692e6962622e636f2f703066323743322f5468756d626e61696c2d392e706e67](https://user-images.githubusercontent.com/40072373/226223834-551a3a67-6b73-425f-ae3f-05eda2c50466.png)",
+  "main": "server/index.js",
+  "scripts": {
+    "start": "node server/index.js",
+    "build": "cd client && npm install && npm run build && cd ../server && npm install",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server && npm run dev",
+    "deploy": "npm run build && npm start"
+  },
+  "keywords": ["dall-e", "openai", "image-generation", "mern-stack"],
+  "author": "",
+  "license": "ISC",
+  "engines": {
+    "node": ">=18"
   }
-  
+}
